# cmakewix

./: CMakeLists.txt  Greeting.cpp  WIX.template.in  install_dir.wxs  patch_path_env.xml  patch_product.xml  srcml_extra_dialog.wxs
.github/workflows/: Test.yml
